apps/authentik/resources/refgrant.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: authentik-server
spec:
  from:
    - group: ''
      kind: HTTPRoute
      namespace: 'prometheus-stack'
  to:
    - group: ''
      kind: Service
      name: authentik-server
