apps/authentik/resources/ldaproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: TLSRoute
metadata:
  name: ldap-route
  namespace: authentik
spec:
  hostnames:
  - "ldaps.engiqueersconcordia.ca"
  rules:
    - backendRefs:
        - name: ak-outpost-ldap
          port: 389
  parentRefs:
    - name: engiqueers
      namespace: ingress
