apps/authentik/resources/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: authentik-db
  namespace: authentik
spec:
  podSelector:
    matchLabels:
      cnpg.io/cluster: authentik-db
  ingress:
    - ports:
        - port: postgresql
      from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: worker
              app.kubernetes.io/instance: authentik
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: server
              app.kubernetes.io/instance: authentik
---
kind: CiliumNetworkPolicy
apiVersion: cilium.io/v2
metadata:
  name: authentik-server
  namespace: authentik
spec:
  endpointSelector:
    matchLabels:
      k8s:app.kubernetes.io/component: server
      k8s:app.kubernetes.io/name: authentik
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: prometheus-stack
            k8s:app.kubernetes.io/name: prometheus
      toPorts:
        - ports:
            - protocol: TCP
              port: "9300"
    - fromEntities:
        - remote-node
        - host
      toPorts:
        - ports:
            - protocol: TCP
              port: "9000"
---
kind: CiliumNetworkPolicy
apiVersion: cilium.io/v2
metadata:
  name: authentik-worker
  namespace: authentik
spec:
  endpointSelector:
    matchLabels:
      k8s:app.kubernetes.io/component: worker
      k8s:app.kubernetes.io/name: authentik
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: prometheus-stack
            k8s:app.kubernetes.io/name: prometheus
      toPorts:
        - ports:
            - protocol: TCP
              port: "9300"
---
kind: CiliumNetworkPolicy
apiVersion: cilium.io/v2
metadata:
  name: authentik-rac
  namespace: authentik
spec:
  endpointSelector:
    matchLabels:
      k8s:app.kubernetes.io/name: authentik-outpost-rac
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: prometheus-stack
            k8s:app.kubernetes.io/name: prometheus
      toPorts:
        - ports:
            - protocol: TCP
              port: "9300"
---
kind: CiliumNetworkPolicy
apiVersion: cilium.io/v2
metadata:
  name: authentik-ldap
  namespace: authentik
spec:
  endpointSelector:
    matchLabels:
      k8s:app.kubernetes.io/name: authentik-outpost-ldap
  ingress:
    - toPorts:
        - ports:
          - protocol: TCP # LDAP
            port: "389"
          - protocol: TCP # LDAPS
            port: "636"

    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: prometheus-stack
            k8s:app.kubernetes.io/name: prometheus
      toPorts:
        - ports:
            - protocol: TCP
              port: "9300"
